--- a/static/manifest.json
+++ b/static/manifest.json
@@ -61,7 +61,7 @@
     }
   ],
   "background_color": "#b9d9eb",
-  "display": "fullscreen",
+  "display": "standalone",
   "scope": "/",
   "theme_color": "#b9d9eb",
   "description": "The Scout client for Team 6305 for the 2022 season.",
