--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   },
   "type": "module",
   "dependencies": {
+    "@types/qrcode": "^1.4.2",
     "dexie": "^3.2.0",
-    "qr-scanner": "^1.4.1"
+    "qr-scanner": "^1.4.1",
+    "qrcode": "^1.5.0"
   }
 }
